...
            .padding(horizontal = 20.dp, vertical = 40.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        // --- TÍTULO CYBERPUNK ---
        Text(
            text = "INICIAR SESIÓN",
            style = TextStyle(
                color = NeonGreen,
                fontSize = 36.sp,
                fontWeight = FontWeight.Bold,
                shadow = Shadow(
                    color = NeonGreen,
...

        Spacer(Modifier.height(24.dp))

        // --- BOTÓN REGISTRO CYBER ---
        TextButton(onClick = onNavigateToRegister) {
            Text(
                "¿No tienes cuenta? Regístrate",
                color = CyberBlue,
                fontWeight = FontWeight.Medium,
                style = TextStyle(
                    shadow = Shadow(CyberBlue, blurRadius = 12f)
                )
            )
...
