...
                )
            )
            .padding(16.dp)
    ) {

        Text(
            text = "CARRITO",
            style = TextStyle(
                color = NeonBlue,
                fontSize = 32.sp,
                shadow = Shadow(color = NeonBlue, blurRadius = 20f)
            ),
        )
...
                imageVector = Icons.Filled.ArrowBack,
                contentDescription = "Volver",
                tint = Color.Black
            )
            Spacer(modifier = Modifier.width(8.dp))
            Text(
                "Volver al menú principal",
                color = Color.Black,
                style = TextStyle(fontSize = 16.sp)
            )
        }

        Spacer(modifier = Modifier.height(12.dp))
...
