...
    val products = ui.value.products
    val productsToShow = remember(category, products) {
        if (category.isNullOrBlank()) products
        else products.filter { it.category.equals(category, ignoreCase = true) }
    }

    val title = category?.replaceFirstChar { it.uppercase() } ?: "Todos los Productos"

    Column(
        modifier = Modifier
            .padding(paddingValues)
            .fillMaxSize()
            .background(Color.Black),
...
